# cameraplus

./: CMakeLists.txt  README.md  appinfo.json
declarative/: CMakeLists.txt  videoplayer.cpp
lib/: CMakeLists.txt
qml/: MainPage.qml
qml/luneos/: CameraButton.qml  CameraCheckButton.qml  CameraLabel.qml  CameraPage.qml  CameraPositionSource.qml  CameraProximitySensor.qml  CameraShareHelper.qml  CameraStyle.qml  CameraTextField.qml  CameraTextSwitch.qml  CameraWindow.qml  DeletePopup.qml
src/: CMakeLists.txt  batteryinfo.cpp  batteryinfo.h  cameraresources.cpp  cameraresources.h  main.cpp  phoneprofile.cpp  phoneprofile.h  platformsettings.cpp  pluginloader.cpp
src/luneos/: CMakeLists.txt  displaystate.cpp  displaystate.h
